--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -18,7 +18,7 @@
     {{else}}
         {{#if employee}}
           <a href="/employees/homepage">Trang chủ</a>
-          <a href="#">Quản lý góp ý</a>
+          <a href="/employees/feedback">Quản lý góp ý</a>
           <a href="/employees/showOrders">Danh sách order</a>
           <a href="#">Order tại quầy</a>
           <a href="/account/signout">Đăng xuất</a>
