--- a/src/resource/views/admin/homepageAdmin.hbs
+++ b/src/resource/views/admin/homepageAdmin.hbs
@@ -9,7 +9,7 @@
     >&times;</a>
     <a href="#">Trang chủ</a>
     <a href="#">Lịch sử góp ý</a>
-    <a href="#">Quản lý order</a>
+    <a href="/admin/orderHistory">Quản lý order</a>
     <a href="#">Quản lý doanh thu</a>
     <a href="/admin/showEmployees">Quản lý nhân viên</a>
     <a href="/admin/showProducts">Quản lý sản phẩm</a>
