--- a/src/resource/views/admin/orderHistory.hbs
+++ b/src/resource/views/admin/orderHistory.hbs
@@ -21,12 +21,14 @@
     .container {
       display: flex;
       align-items: center;
+      justify-content: space-between;
     }
 
     .btnView{
-      background-color: bisque;
-      height: 30px;
+      background-color: #fff;
+      height: 38px;
       width: 80px;
+      border: 1px solid #ccc;
       align-items: center;
       border-radius: 5px;
     }
@@ -59,7 +61,7 @@
       display: none;
       position: absolute;
       z-index: 1;
-      border: 1px solid #ccc;
+      border: 1px solid #C38154;
       border-radius: 4px;
       box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
       background-color: #fff;
@@ -79,6 +81,11 @@
     }
     .hv:hover {
       text-decoration: underline;
+    }
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
     }
   </style>
   
@@ -106,9 +113,10 @@
               </div>
             </div>
           </div>
+      </form>
 
           <div class="form-group marginB20">
-            <label>Phương thức thanh toán:</label>
+            <label style = "margin-top: 15px;">Phương thức thanh toán:</label>
             <div data-target-input="nearest" >
               <div class="search-container">
                 <input type="text" class="search-input">
@@ -125,13 +133,12 @@
 
         
           <button
-            class="btnView" type="submit" form="form"> 
-            <i class="fa-solid fa-eye"></i> View
+            class="btnView " type="submit" style = "margin-top: 24px;" form="form"> 
+            <i class="fa-solid fa-eye"></i> Xem
           </button>
-      </form>
   </div>
 
-  <table class="table caption-top">
+  <table class="table">
     <thead>
       <tr>
         <th scope="col" style="padding-left: 30px;">ID</th>
