Update search bar

--- a/src/resource/views/search.hbs
+++ b/src/resource/views/search.hbs
@@ -92,8 +92,7 @@
 
     <div class="col-sm-9 col-lg-9 mt-4">
       <div id="coffee">
-        <h1 class="menu__session-title ml-3">Cà phê</h1>
-        {{#each products}}
+        {{#each search}}
           {{#ifEquals this.type "coffee"}}
             <div class="menu__item col-sm-2 col-lg-2">
               <div class="card card-course-item">
@@ -118,8 +117,7 @@
       </div>
 
       <div id="juice">
-        <h1 class="menu__session-title ml-3 mt-3">Nước ép</h1>
-        {{#each products}}
+        {{#each search}}
           {{#ifEquals this.type "juice"}}
             <div class="menu__item col-sm-2 col-lg-2">
               <div class="card card-course-item">
@@ -144,8 +142,7 @@
       </div>
 
       <div id="smoothy">
-        <h1 class="menu__session-title ml-3 mt-3">Sinh tố</h1>
-        {{#each products}}
+        {{#each search}}
           {{#ifEquals this.type "smoothy"}}
             <div class="menu__item col-sm-2 col-lg-2">
               <div class="card card-course-item">
@@ -170,8 +167,7 @@
       </div>
 
       <div id="iceblended">
-        <h1 class="menu__session-title ml-3 mt-3">Đá xay</h1>
-        {{#each products}}
+        {{#each search}}
           {{#ifEquals this.type "iceblended"}}
             <div class="menu__item col-sm-2 col-lg-2">
               <div class="card card-course-item">
@@ -196,8 +192,7 @@
       </div>
 
       <div id="tea">
-        <h1 class="menu__session-title ml-3 mt-3">Trà</h1>
-        {{#each products}}
+        {{#each search}}
           {{#ifEquals this.type "tea"}}
             <div class="menu__item col-sm-2 col-lg-2">
               <div class="card card-course-item">
@@ -222,8 +217,7 @@
       </div>
 
       <div id="milktea">
-        <h1 class="menu__session-title ml-3 mt-3">Trà sữa</h1>
-        {{#each products}}
+        {{#each search}}
           {{#ifEquals this.type "milktea"}}
             <div class="menu__item col-sm-2 col-lg-2">
               <div class="card card-course-item">
@@ -248,8 +242,7 @@
       </div>
 
       <div id="soda">
-        <h1 class="menu__session-title ml-3 mt-3">Soda</h1>
-        {{#each products}}
+        {{#each search}}
           {{#ifEquals this.type "soda"}}
             <div class="menu__item col-sm-2 col-lg-2">
               <div class="card card-course-item">
@@ -274,8 +267,7 @@
       </div>
 
       <div id="food">
-        <h1 class="menu__session-title ml-3 mt-3">Đồ ăn</h1>
-        {{#each products}}
+        {{#each search}}
           {{#ifEquals this.type "food"}}
             <div class="menu__item col-sm-2 col-lg-2">
               <div class="card card-course-item">
@@ -313,11 +305,11 @@
     document.getElementById('searchForm').addEventListener('submit', function (event) {
         var searchKeyword = document.getElementById('searchInput').value;
         if (searchKeyword.trim()) {
-            // Append the search keyword to the URL
+            // Thêm keyword vào params
             window.location.href = '/search?params=' + encodeURIComponent(searchKeyword);
-            event.preventDefault(); // Prevent the default form submission
+            event.preventDefault(); // Xử lý Submit khi không điền gì
         } else {
-            event.preventDefault(); // Prevent form submission if the search keyword is empty
+            event.preventDefault(); //  Xử lý Submit khi không điền gì
         }
     });
 </script>
