--- a/src/resource/views/cart/show.hbs
+++ b/src/resource/views/cart/show.hbs
@@ -16,7 +16,7 @@
                     <th scope="col">SẢN PHẨM</th>
                     <th scope="col">ĐƠN GIÁ</th>
                     <th scope="col">SỐ LƯỢNG</th>
-                    <th scope="col">THÀNH TIÊN</th>
+                    <th scope="col">THÀNH TIỀN</th>
                     <th scope="col"></th>
                  </tr>
               </thead>
