--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -51,7 +51,7 @@
     <button
       class="btn btn-outline-success mr-5 my-sm-2 home__seach-btn"
       type="submit"
-    >Search</button>
+    >Tìm</button>
   </form>
   <a class="shopping-cart pr-3" href="cart/show" style="float: right;"><i
       class="fa-solid fa-cart-shopping"
