--- a/src/resource/views/employees/orderList.hbs
+++ b/src/resource/views/employees/orderList.hbs
@@ -73,16 +73,21 @@
       viewDetailBtn.type = 'button';
       viewDetailBtn.className = 'btn btn-info mr-2';
       viewDetailBtn.innerText = 'Xem chi tiết';
+      viewDetailBtn.setAttribute('data-id', order._id);
+      viewDetailBtn.addEventListener('click', function(){
+          var orderId=this.getAttribute('data-id');
+          window.location.href = '/cart/order/' + orderId;
+      })
 
       if (order.status!="done"){
         const confirmBtn = document.createElement('button');
-      confirmBtn.type = 'button';
-      confirmBtn.className = 'btn btn-success';
-      confirmBtn.innerText = 'Confirm';
-      confirmBtn.setAttribute('data-id', order._id);
+        confirmBtn.type = 'button';
+        confirmBtn.className = 'btn btn-success';
+        confirmBtn.innerText = 'Confirm';
+        confirmBtn.setAttribute('data-id', order._id);
 
-      confirmBtn.addEventListener('click', function () {
-      // Get the data-id attribute value
+        confirmBtn.addEventListener('click', function () {
+        // Get the data-id attribute value
          var orderId = this.getAttribute('data-id');
          if (order.status=="waiting"){
            // Emit the socket event with the orderId
@@ -98,19 +103,14 @@
          }
       });
       col2.appendChild(confirmBtn);
-
-      }
-      
+      }  
       col2.appendChild(viewDetailBtn);
-      
-
       // Append everything
       row.appendChild(col1);
       row.appendChild(col2);
       cardBody.appendChild(row);
       card.appendChild(cardHeader);
       card.appendChild(cardBody);
-
       // Append the card to the ordersList
       ordersList.appendChild(card);
        
