--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .header {
   width: 100%;
   height: 226px;
@@ -137,8 +138,8 @@ ul.nav-pills {
   font-size: 30px; }
 
 .product__image {
-  height: 500px;
-  width: 500px;
+  height: 600px;
+  width: 600px;
   border-radius: 5px; }
 
 .product__order-attribute-name {
@@ -209,3 +210,9 @@ li.nav-item {
 
 .order-status {
   width: 200px; }
+
+.nav-item.active {
+  background-color: #C4996C;
+  /* Màu của Bootstrap primary */
+  color: #fff;
+  /* Màu chữ trắng */ }
