--- a/src/resource/views/cart/show.hbs
+++ b/src/resource/views/cart/show.hbs
@@ -1,8 +1,7 @@
 <div class="mt-4 ml-4">
     <a style="color: rgb(100, 97, 97);" href="/"> Trang chủ </a>
     <span>&gt;</span>
-     <a style="color: rgb(100, 97, 97);" href="/cart/show"> Giỏ hàng </a>
-     <a class="shopping-cart mr-4 pl-3" style="float: right; font-size:x-large"><i class="fa-solid fa-cart-shopping" style="width: 50px;"></i></a>
+    <a style="color: rgb(100, 97, 97);" href="/cart/show"> Giỏ hàng </a>
 </div>
 
 <div class="container-fluid mt-4">
@@ -42,7 +41,7 @@
         <tr>
           <td colspan="5" class="text-center">
             Chưa có order.
-            <a href="">Thêm order</a>
+            <a href="/">Thêm order</a>
           </td>
         </tr>
       {{/each}}
@@ -65,7 +64,7 @@
             <input type="number" class="order__infor-detail mb-2 mr-sm-2" name="totalCost" id="discount" value="{{total}}" readonly>
           </div>
           <textarea class="form-control mt-2" rows="5" style="width:280px;" name="note" id="comment" placeholder="Lời nhắn đến nhân viên" ></textarea>
-          <button type="submit" class="btn btn-warning product__order-button mt-4">Xác nhận</button>
+          <button type="submit" class="btn btn-warning product__order-button mt-4" style="background-color: #ffcc81;">Xác nhận</button>
          
          </form>
     </div>
@@ -77,7 +76,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
+        <h5 class="modal-title">Xóa Order</h5>
         <button
           type="button"
           class="close"
@@ -91,7 +90,7 @@
         <p>Bạn chắc chắn muốn xóa order này?</p>
       </div>
       <div class="modal-footer">
-        <button id="btn-delete-course" type="button" class="btn btn-danger">Xóa
+        <button id="btn-delete-course" type="button" class="btn btn-danger" style="background-color: #ffcc81;">Xóa
           bỏ</button>
         <button
           type="button"
