--- a/src/resource/views/products/showProduct.hbs
+++ b/src/resource/views/products/showProduct.hbs
@@ -2,7 +2,6 @@
     <a style="color: rgb(100, 97, 97);" href="/"> Trang chủ </a>
     <span>&gt;</span>
      <a style="color: rgb(100, 97, 97);" href="/products/{{product.slug}}"> {{product.name}} </a>
-     <a class="shopping-cart mr-4 pl-3" style="float: right; font-size:x-large"><i class="fa-solid fa-cart-shopping" style="width: 50px;"></i></a>
 </div>
 
 
@@ -109,7 +108,9 @@
             </div>
          </div>
 
-          <button type="submit" class="btn btn-warning product__order-button">Thêm vào đơn hàng</button>
+          <div class="text-center">
+             <button type="submit" class="btn btn-warning product__order-button" style="background-color: #ffcc81;">Thêm vào đơn hàng</button>
+         </div>
 
     </form>
     </div>
