--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -9,7 +9,7 @@
     >&times;</a>
     {{#if admin}}
       <a href="/admin/homepage">Trang chủ</a>
-      <a href="#">Lịch sử góp ý</a>
+      <a href="/admin/feedback">Quản lý góp ý</a>
       <a href="/admin/orderHistory">Quản lý order</a>
       <a href="#">Quản lý doanh thu</a>
       <a href="/admin/showEmployees">Quản lý nhân viên</a>
@@ -39,7 +39,12 @@
     >&#9776;</span>
     <a class="navbar-brand ml-3"><span class="home__nav-title">My Coffee</span></a>
   </div>
-  <form class="form-inline ml-5 pl-2" action= "/search" method="get" id="searchForm">
+  <form
+    class="form-inline ml-5 pl-2"
+    action="/search"
+    method="get"
+    id="searchForm"
+  >
     <input
       class="mr-sm-3 home__search-bar"
       type="text"
@@ -312,14 +317,11 @@
 </script>
 
 <script>
-    document.getElementById('searchForm').addEventListener('submit', function (event) {
-        var searchKeyword = document.getElementById('searchInput').value;
-        if (searchKeyword.trim()) {
-            // Append the search keyword to the URL
-            window.location.href = '/search?params=' + encodeURIComponent(searchKeyword);
-            event.preventDefault(); // Prevent the default form submission
-        } else {
-            event.preventDefault(); // Prevent form submission if the search keyword is empty
-        }
-    });
+  document.getElementById('searchForm').addEventListener('submit', function
+  (event) { var searchKeyword = document.getElementById('searchInput').value; if
+  (searchKeyword.trim()) { // Append the search keyword to the URL
+  window.location.href = '/search?params=' + encodeURIComponent(searchKeyword);
+  event.preventDefault(); // Prevent the default form submission } else {
+  event.preventDefault(); // Prevent form submission if the search keyword is
+  empty } });
 </script>
