--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -268,4 +268,8 @@ li.nav-item {
   width: 200px;
 }
 
-
+.d-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Căn giữa theo chiều ngang */
+}
