--- a/src/resource/views/admin/showProducts.hbs
+++ b/src/resource/views/admin/showProducts.hbs
@@ -57,7 +57,7 @@
         <button class="btn btn-add">
             <a href="/products/addProduct">
                 <i class="fa-sharp fa-solid fa-plus"></i>
-                New Product
+                Thêm sản phẩm
             </a>
         </button>
     </div>
@@ -69,12 +69,12 @@
     <table class="table">
         <thead class="thead-dark">
         <tr>
-            <th >Name</th>
-            <th >Type</th>
-            <th >Image</th>
-            <th >Price</th>
+            <th >Tên</th>
+            <th >Loại</th>
+            <th >Hình ảnh</th>
+            <th >Đơn giá</th>
             <th >Slug</th>
-            <th >Action</th>
+            <th >Sửa/Xóa</th>
 
         </tr>
         </thead>
@@ -105,7 +105,7 @@
         {{else}}
             <tr>
             <td colspan="5" class="text-center">
-                Chưa có nhân viên.
+                Chưa có sản phẩm.
                 <a href="/products/addProduct">Thêm sản phẩm</a>
             </td>
             </tr>
