--- a/src/resource/views/cart/editOrder.hbs
+++ b/src/resource/views/cart/editOrder.hbs
@@ -1,7 +1,7 @@
 <div class="mt-4 ml-4">
     <a style="color: rgb(100, 97, 97);" href="/cart/show"> Trở về </a>
     <span>&gt;</span>
-     <a style="color: rgb(100, 97, 97);" href="/products/{{product.slug}}"> {{product.name}} </a>
+     <a style="color: rgb(100, 97, 97);" href="/products/{{product.slug}}"> Chỉnh sửa {{product.name}} </a>
      <a class="shopping-cart mr-4 pl-3" style="float: right; font-size:x-large"><i class="fa-solid fa-cart-shopping" style="width: 50px;"></i></a>
 </div>
 
