--- a/src/resource/views/cart/successOrder.hbs
+++ b/src/resource/views/cart/successOrder.hbs
@@ -1,1 +1,36 @@
-<h2>Bạn đã order thành công</h2>
+
+
+<section class="vh-100" style="background-color: rgb(247, 247, 247);">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-xl-10">
+        <div class="card" style="border-radius: 1rem;">
+          <div class="row g-0">
+            <div class="col-md-6 col-lg-5 d-none d-md-block" >
+              <img height="500" width="400" src="../../public/image/logo_left.jpg"
+                alt="login form" style="border-radius: 1rem 0 0 1rem;" />
+            </div>
+            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+              <div class="card-body p-4 p-lg-5 text-black">
+
+                <form method="POST">
+                  <div class="d-flex align-items-center mb-3 pb-1 ">
+                    <i class="fas fa-cubes fa-2x me-3" style="color: #a45e32;"></i>
+                    <span class="h1 fw-bold mb-0 ml-2" style="color: #a45e32;justify-content: center;">MyCoffee</span>
+                  </div>
+
+                  
+                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px; color: #6b2f0a; font-size: 2rem; justify-content: center;" >Bạn đã order thành công! Cảm ơn bạn rất nhiều!</h5>
+                <div class="mt-4 ml-4">
+                    <a style="color: rgb(100, 97, 97);margin:auto;" href="/"> Trở về trang chủ </a>
+                </div>
+                </form>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
