--- a/src/resource/views/cart/wait.hbs
+++ b/src/resource/views/cart/wait.hbs
@@ -1,25 +1,57 @@
-<h2>Vui lòng chờ nhân viên xác nhận</h2>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+<section class="vh-100" style="background-color: rgb(247, 247, 247);">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-xl-10">
+        <div class="card" style="border-radius: 1rem;">
+          <div class="row g-0">
+            <div class="col-md-6 col-lg-5 d-none d-md-block" >
+              <img height="500" width="400" src="../../public/image/logo_left.jpg"
+                alt="login form" style="border-radius: 1rem 0 0 1rem;" />
+            </div>
+            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+              <div class="card-body p-4 p-lg-5 text-black">
 
-<script>
-     const url = window.location.origin;
-     const socket = io(url, { query: `status=waiting` });
-     socket.emit("new-order","New order");
+                <form method="POST" action="/account/signin" >
+                  <div class="d-flex align-items-center mb-3 pb-1 ">
+                    <i class="fas fa-cubes fa-2x me-3" style="color: #a45e32;"></i>
+                    <span class="h1 fw-bold mb-0 ml-2" style="color: #a45e32;justify-content: center;">MyCoffee</span>
+                  </div>
 
-     const orderId=`{{order._id}}`;
+                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px; color: #6b2f0a; font-size: 2rem; justify-content: center;" >Vui lòng chờ nhân viên xác nhận</h5>
 
-     socket.on("to-paying",data=>{
-          if (orderId==data){
-              // Assuming you have access to the current window object
-               const currentURL = window.location.href;
-  
-                // Construct the new URL with the orderId parameter
-               const newURL = currentURL.replace("/wait", "/pay") + `?orderId=${data}`;
+                </form>
 
-              // Redirect to the new URL
-                  window.location.href = newURL 
-          }
-     })
-</script>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+     <script>
+          const url = window.location.origin;
+          const socket = io(url, { query: `status=waiting` });
+          socket.emit("new-order","New order");
+
+          const orderId=`{{order._id}}`;
+
+          socket.on("to-paying",data=>{
+               if (orderId==data){
+               // Assuming you have access to the current window object
+                    const currentURL = window.location.href;
+     
+                    // Construct the new URL with the orderId parameter
+                    const newURL = currentURL.replace("/wait", "/pay") + `?orderId=${data}`;
+
+               // Redirect to the new URL
+                    window.location.href = newURL 
+               }
+          })
+     </script>
+
+
