Update bill view

--- a/src/resource/views/cart/makePayment.hbs
+++ b/src/resource/views/cart/makePayment.hbs
@@ -33,7 +33,7 @@
                       <span class="transaction-label">Nội dung chuyển khoản:</span> mycoffee
                   </div>
                   <div class="transaction-item">
-                      <span class="transaction-label">Số tiền thanh toán:</span> 500,000 VND
+                      <span class="transaction-label">Số tiền thanh toán:</span> {{order.total}}
                   </div>
               </div>
 
@@ -48,7 +48,7 @@
                       <span class="transaction-label">Nội dung chuyển khoản:</span> mycoffee
                   </div>
                   <div class="transaction-item">
-                      <span class="transaction-label">Số tiền thanh toán:</span> 500,000 VND
+                      <span class="transaction-label">Số tiền thanh toán:</span> {{order.total}}
                   </div>
               </div>
 
