--- a/src/resource/views/employees/orderList.hbs
+++ b/src/resource/views/employees/orderList.hbs
@@ -1,4 +1,7 @@
 <div class="container mt-4">
+  <div class="mt-4 ml-4">
+    <a style="color: rgb(100, 97, 97);margin:auto;" href="/employees/homepage"> Trở về trang chủ </a>
+  </div>
   <h2>Danh sách Order</h2>  
   <ul class="list-group mt-2 flex-row" id="orderStatusList">  
    <li class="list-group-item order-status"><a class="text-dark ml-4 " href="/employees/showOrders?status=waiting">Chờ xác nhận</a></li>
