--- a/src/resource/views/cart/viewOrder.hbs
+++ b/src/resource/views/cart/viewOrder.hbs
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+{{!-- <div class="container mt-5">
   <h2>Order Detail</h2>
   
   <div class="card">
@@ -32,4 +32,74 @@
       <p class="mt-3"><strong>Total Price:</strong> <span id="totalAmount">{{orderDetail.total}}</span></p>
     </div>
   </div>
+</div> --}}
+<div class="mt-4 ml-4">
+  {{#if employee}}
+    <a style="color: rgb(100, 97, 97);" href="/employees/homepage">
+      Trang chủ
+    </a>
+  {{else}}
+    <a style="color: rgb(100, 97, 97);" href="/"> Trang chủ </a>
+    <span>&gt;</span>
+  {{/if}}
+  <span>&gt;</span>
+  {{! Reply }}
+  {{#if employee}}
+    <a style="color: rgb(100, 97, 97);" href="/employees/cart/show">
+      Giỏ hàng
+    </a>
+  {{else}}
+    <a style="color: rgb(100, 97, 97);" href="/cart/show"> Giỏ hàng </a>
+  {{/if}}
+  
 </div>
+<div class="container-fluid mt-4">
+  <div class="row">
+    <div class="col-sm-8" style="background-color:rgb(250, 250, 251);">
+        <h3>Mã đơn: {{orderTable._id}}</h3> 
+        <h3>Bàn: {{orderTable.tableId}}</h3> 
+        <div class="box__orderDetail">
+            <table class="table mt-4 ">
+              <thead>
+                <tr>
+                    <th scope="col">Sản phẩm</th>
+                    <th scope="col">Đơn giá</th>
+                    <th scope="col">Số lượng</th>
+                    <th scope="col">Thành tiền</th>
+                    <th scope="col"></th>
+                 </tr>
+              </thead>
+    <tbody>
+      {{#each ordersList}}
+        <tr>
+          <td scope="row"><strong>{{this.productName}}</strong>
+            <ul>
+                <li>Tỉ lệ đá: {{this.icePercent}}</li>
+                <li>Tỉ lệ đường: {{this.sugarPercent}}</li>
+                <li>Thêm: {{this.extra}}</li>
+            </ul>
+          </td>
+          <td>{{this.amount}}</td>
+          <td>{{this.quantity}}</td>
+          <td>{{this.total}}</td>
+        </tr>
+      {{/each}}
+    </tbody>
+  </table>
+        </div>
+    </div>
+    <div class="col-sm-4 mt-4" style="background-color:rgb(255, 255, 255);">
+          <div class="d-inline-flex">
+            <label for="total" class="mr-sm-2">Tạm tính: </label>
+            <input type="number" class="order__infor-detail mb-2 mr-sm-2" name="total" id="total" value="{{orderTable.total}}" readonly>
+          </div>
+          <div class="d-inline-flex">
+            <label for="discount" class="mr-sm-2">Giảm giá: </label>
+            <input type="number" class="order__infor-detail mb-2 mr-sm-2" name="discount" id="discount" value="{{orderTable.discount}}" readonly>
+          </div>
+          <div class="d-inline-flex mt-4">
+            <label for="discount" class="mr-sm-2"><strong>Tổng cộng</strong> </label>
+            <input type="number" class="order__infor-detail mb-2 mr-sm-2" name="totalCost" id="discount" value="{{orderTable.total}}" readonly>
+          </div>
+    </div>
+  </div>
